# reflective-agent-architecture

./: .env.example  .gitignore  =0.19.0  CRITICAL_FIXES_SUMMARY.md  DEVELOPMENT.md  LICENSE  PHILOSOPHICAL_SYNTHESIS_2.md  RAA_AGENT.md  README.md  REFLEXIVE_CLOSURE_EXECUTIVE_SUMMARY.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_2.md  a_note_on_model_selection.md  codebase_improvements.md  codebase_improvements_2025-12-10.md  compass_mcp_config.example.json  compass_mcp_config.json  debug_mcp.py  debug_mcp_adapter.py  debug_slap_prompt.py  debug_tool_schema.py  diagnose_issues.py  docker-compose.yml  formal_foundations_for_recursive_ai.md  mcp_config.json.example  pyproject.toml  requirements.txt  run_log.txt  run_log_clean.txt  structural_analysis.md  structural_analysis_2025-12-08.md  structural_analysis_2025-12-09.md  structural_analysis_2025-12-10.md  test_fix.py  test_ollama.py  test_sync.py  todo_list.md  validate_energy_search.py  verify_search.py
.CODEAGENCY/: evaluation.md  plan.md  work_log.md
.github/: FUNDING.yml  copilot-instructions.md
.trunk/: trunk.yaml
Topological_Active_Inference/: comprehensive_philosophical_assessment.md  theoretical_assessment.md  tom_synthesis.md  white_paper.md
benchmarks/: questions.json  results_20251130_235151.json  results_20251130_235301.json  results_20251130_235455.json  results_20251130_235652.json  results_20251130_235906.json  results_20251201_000910.json  results_20251201_005133.json  run_stress_test.py
docs/: ADAPTIVE_BETA_IMPLEMENTATION.md  BETA_SCALING_AND_TESTING.md  COMPASS_INTEGRATION.md  REFERENCES.md  (+53 more)
(+533 files in other folders)
